2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (conninfo): Always provide servname to getnameinfo.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_query_server): Add
	curl_easy_setopt_ck macro, use it for all curl_easy_setopt calls.

2022-05-09  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_write_callback): Check result
	of curl_easy_getinfo.

2022-05-05  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (main): Define use_epoll. Set to MHD_USE_EPOLL
	based on MHD_VERSION. Don't use MHD_USE_THREAD_PER_CONNECTION
	when use_poll is set.

2022-05-05  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (main): Define mhd_flags. Use mhd_flags for
	MHD_start_daemon. Try again with MHD_USE_DUAL_STACK removed if
	that fails. Update clog to say either IPV4 or IPV4 and IPV6.
	stop either ithe d46 or d4 daemonr.

2022-05-09  Noah Sanci  <nsanci@redhat.com>

	* debuginfod.cxx (main): Set nonzero defaults for fdcache.

2022-05-04  Frank Ch. Eigler <fche@redhat.com>
	    Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_query_server): Correct fd leak
	for cache negative-hit unlink case.
	(debuginfod_config_cache, debuginfod_init_cache): Correct
	minor fd leaks.
	* debuginfod-find.c  (main): Ditto.

2022-04-22  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (libdebuginfod): Add -lpthread.
	(libdebuginfod_so_LDLIBS): Likewise.
	* debuginfod-client.c (init_control): New static pthread_once_t.
	(libcurl_init): New static function.
	(debuginfod_begin): Use ptrace_once to call libcurl_init.
	(libdebuginfod_ctor): Removed.
	(libdebuginfod_dtor): Likewise.

2022-04-24  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (main): Add MHD_USE_ITC to MHD_start_daemon flags.

2022-04-13  Aaron Merey  <amerey@redhat.com>

	* debuginfod-client.c (debuginfod_query_server):
	Drop st_mode check. Add st_size > 0 check.
	Save target_mtime before calling
	debuginfod_config_cache. unlink target_cache_path