@@ -1,5 +1,11 @@
 2022-05-09  Mark Wielaard  <mark@klomp.org>
 
+	* debuginfod-client.c (debuginfod_config_cache): Always open with
+	O_CREATE first, then use fstat, only write the cache_config_default_s
+	value if st_size == 0, otherwise read value from file.
+
+2022-05-09  Mark Wielaard  <mark@klomp.org>
+
 	* debuginfod.cxx (conninfo): Always provide servname to getnameinfo.
 
 2022-05-09  Mark Wielaard  <mark@klomp.org>
